[tool.poetry]
name = "mirror-descent-for-gworld-mdp"
version = "0.1.0"
description = ""
authors = ["David Siska"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.1.1"
scipy = "^1.14.1"
matplotlib = "^3.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
